# loudframe

./: .gitignore  LICENSE  README.md
MAXBOTICS/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.aithinker
MAXBOTICS/main/: CMakeLists.txt  max_driver.c
aithinker-adf/: README.md
aithinker-adf/audio_board/: CMakeLists.txt  Kconfig.projbuild  README.md
aithinker-adf/es8388/: es8388.c
gyus42/: CMakeLists.txt  sdkconfig  sdkconfig.old
gyus42/main/: CMakeLists.txt  gyus42.c  gyus42_driver.h
play_sdcard/: .gitignore  envs.ps1  sdkconfig  sdkconfig.defaults  sdkconfig.old
play_sdcard/main/: play_sdcard_music_example.c
play_sdcard_multi/: CURL_CMDS.txt  ESP32_DMA_MEMORY_ANALYSIS.md  HTTP_API.md  WEB_INTERFACE_DEBUG_GUIDE.md  WIFI_SETUP.md  sdkconfig.defaults
play_sdcard_multi/device-manager/: CHEATSHEET.md  README_NETWORK_TOOLS.md  batch_controller.py  device_controller.py  device_scanner.py  file_manager.py  id_manager.py  requirements.txt
play_sdcard_multi/main/: CMakeLists.txt  component.mk  config_manager.c  config_manager.h  http_server.c  http_server.h  music_files.c  music_files.h  play_sdcard.c  play_sdcard.h  play_sdcard_debug.c  play_sdcard_passthrough.c  unit_status_manager.c  unit_status_manager.h  wifi_config_util.h  wifi_manager.c  wifi_manager.h  wifi_manager_async.c
player32/: CMakeLists.txt  envs.ps1  player32.code-workspace  sdkconfig.defaults
player32/main/: CMakeLists.txt  es8388_player.c  generator.c  player32.c  player32.h  sdreader.c  tone_reader.c  wav_reader.c  wav_reader.cpp
us100/: CMakeLists.txt
us100/main/: CMakeLists.txt  (+1 more)
(+29 files in other folders)
